--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -861,6 +861,9 @@
     <Compile Include="Models\puesto.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RD_hits.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\RH_menu_comedor_platillos.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
