2023-09-14 Se agrega DL a menú de comedor.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -5282,6 +5282,7 @@
     <Content Include="Views\IT_matriz_requerimientos\Asignar.cshtml" />
     <Content Include="Views\IT_mantenimientos\PosponerMantenimiento.cshtml" />
     <Content Include="Views\UsersAdmin\EditEmail.cshtml" />
+    <Content Include="Views\RH_menu_comedor\ListaDistribucion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
