2023-11-21 se comienza con lectura de datos de ht.

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -14,6 +14,7 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
+		<add key="aspnet:MaxJsonDeserializerMembers" value="2147483647" />
 		<!-- Envio desde lagermex -->
 		<!--
 		<add key="smtpServer" value="pop4.lagermex.com.mx" />
