2023-12-01 Se completa primera version de plantilla budget.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -5300,6 +5300,7 @@
     <Content Include="Views\ResponsableBudget\EditCentroPresenteHT.cshtml" />
     <Content Include="Views\ResponsableBudget\EditCentroProximoHT.cshtml" />
     <Content Include="Views\ResponsableBudget\DetailsCentroHT.cshtml" />
+    <Content Include="Views\BudgetControlling\CargaConcentrado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
