--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -114,9 +114,11 @@
 		
 		<!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
 		<!--Productivo AZURE-->
+		<!--
 		<add name="DefaultConnection" connectionString="Server=10.183.110.7, 60915; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.183.110.7, 60915;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 		<add name="cube_tkmmConnection" connectionString="Server=10.183.110.7, 60915; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+		-->
 		<!--Productivo NUEVO-->
 		<!--
 		<add name="DefaultConnection" connectionString="Server=10.122.163.30\productivo; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
@@ -136,11 +138,9 @@
 		<add name="cube_tkmmConnection" connectionString="Server=10.122.163.30\desarrollo; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		-->
 		<!--Productivo PRUEBAS (desarrollo)-->
-		<!--
-		<add name="DefaultConnection" connectionString="Server=10.122.163.30\desarrollo; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.122.163.30\desarrollo;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-		<add name="cube_tkmmConnection" connectionString="Server=10.122.163.30\productivo; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-		-->
+		<add name="DefaultConnection" connectionString="Server=10.183.110.7, 62962; Database=Portal_2_0; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+		<add name="Portal_2_0Entities" connectionString="metadata=res://*/Models.NuevoPortalModel.csdl|res://*/Models.NuevoPortalModel.ssdl|res://*/Models.NuevoPortalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.183.110.7, 62962;initial catalog=Portal_2_0;user id=ThyssenTest;password=P0rt4l*;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="cube_tkmmConnection" connectionString="Server=10.183.110.7, 62962; Database=cube_tkmm; User Id=ThyssenTest; Password=P0rt4l*; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 		<!--También configurar EnviaCorreo.cs  para productivo/desarrollo-->
 		<!--Desarrollo-->
 		<!--
