--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -444,6 +444,9 @@
     <Compile Include="Models\budget_rel_conceptos_formulas.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\budget_rel_documento.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\budget_rel_fy_centro.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
@@ -653,6 +656,7 @@
     <Compile Include="Models\MetadataModels\budget_mapping_bridge_Metadata.cs" />
     <Compile Include="Models\MetadataModels\budget_plantasMetadata.cs" />
     <Compile Include="Models\MetadataModels\budget_rel_conceptos_cantidadesMetada.cs" />
+    <Compile Include="Models\MetadataModels\budget_rel_documentoMetadata.cs" />
     <Compile Include="Models\MetadataModels\clientesMetadata.cs" />
     <Compile Include="Models\MetadataModels\GV_medios_transporteMetadata.cs" />
     <Compile Include="Models\MetadataModels\GV_rel_gastos_solicitudMetadata.cs" />
@@ -5038,7 +5042,6 @@
     <Content Include="Views\BG_CuentasSAP\Enable.cshtml" />
     <Content Include="Views\BG_CuentasSAP\Index.cshtml" />
     <Content Include="Views\ResponsableBudget\Centros.cshtml" />
-    <Content Include="Views\ResponsableBudget\EditCentroProximo.cshtml" />
     <Content Include="Views\BudgetControlling\Reportes.cshtml" />
     <Content Include="Views\BG_Plants\Create.cshtml" />
     <Content Include="Views\BG_Plants\Details.cshtml" />
@@ -5298,6 +5301,8 @@
     <Content Include="Views\ResponsableBudget\EditCentroPresenteHT.cshtml" />
     <Content Include="Views\ResponsableBudget\DetailsCentroHT.cshtml" />
     <Content Include="Views\BudgetControlling\CargaConcentrado.cshtml" />
+    <Content Include="Views\ResponsableBudget\EditCentroProximoHT.cshtml" />
+    <Content Include="Views\ResponsableBudget\EditarSoporte.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
