2024-05-02 Se aumenta el tamaño maximo de json en CI inventario.

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -14,7 +14,7 @@
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="owin:AppStartup" value="IdentitySample.Startup,BitacorasProduccion" />
-		<add key="aspnet:MaxJsonDeserializerMembers" value="2147483647" />
+		<add key="aspnet:MaxJsonDeserializerMembers" value="3147483647" />
 		<!-- Envio desde lagermex -->
 		<!--
 		<add key="smtpServer" value="pop4.lagermex.com.mx" />
@@ -37,16 +37,24 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
+	
 	<system.web>
 		<sessionState timeout="400" />
 		<globalization uiCulture="es" culture="es-MX" />
 		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime maxRequestLength="20480" targetFramework="4.5" />
+		<httpRuntime maxRequestLength="104857600" targetFramework="4.7.2" />
 		<customErrors mode="RemoteOnly">
 			<error redirect="~/Error/NotFound" statusCode="404" />
 			<error redirect="~/Error/BadRequest" statusCode="400" />
 		</customErrors>
 	</system.web>
+	<system.web.extensions>
+		<scripting>
+			<webServices>
+				<jsonSerialization maxJsonLength="5000000"></jsonSerialization>
+			</webServices>
+		</scripting>
+	</system.web.extensions>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
