--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -268,6 +268,7 @@
     </Compile>
     <Compile Include="App_Start\ActionFilterSession.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\CustomJsonValueProviderFactory.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\HandleError.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
