--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -44,6 +44,7 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="QRCoder" version="1.5.1" targetFramework="net472" />
   <package id="Respond" version="1.2.0" targetFramework="net472" />
   <package id="SpreadsheetLight" version="3.4.9" targetFramework="net45" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
@@ -53,5 +54,6 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="Thought.vCards" version="1.0.9" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
